# llm_eval

./: .gitignore  README.md  combine_csvs.py  install_ollama_models.sh  mlflow.db  pyproject.toml
cluster_analysis_plots/: ANALYSIS_REPORT.txt
src/Data_Cleaning/: adaptive_threshold.py  afterpcadata.py  cleandata.py  pca.py  pca_2.py
src/configs/: crop_coords.json  model_config.toml  prompt.toml  vlm_model_config.toml
src/llm_eval/: bot.py  evaluate.py  mlflow_.py  utils.py
src/notebooks/: balu_dataanalysis.ipynb  checkh5.ipynb  cluster_relabel_participants.ipynb  comparision_.ipynb  dataset.ipynb  feature_comparison_hrt_study.ipynb  lopo_rf_analysis.ipynb  medipipe.ipynb  mlflow.db  outlier_detecion.ipynb  pca_xgboost_relabel.ipynb  test.ipynb  utils.py  webcam_filtered_landmarks.csv  xgboost_predictions.ipynb
src/vlm_eval/: crop.py  vlm_bot.py  vlm_evaluate.py
