[project]
name = "llm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Karthik-Sai-Pasupuleti", email = "KarthikSai.Pasupuleti@thi.de" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "mlflow>=2.15",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "pydantic>=2.7",
    "langchain>=0.2",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.1",
    "PyYAML>=6.0",
    "seaborn>=0.13.2",
    "langchain-community>=0.4.1",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
